# rust-user-registration-system

./: .gitignore  Cargo.toml  README.md
locales/: de.yml  en.yml
src/: file_util.rs  lib.rs  main.rs  print_util.rs  user.rs
