[package]
name = "rust-user-registration-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
