[package]
name = "rust-user-registration-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
current_locale = "0.1.1"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
rust-i18n = "2.0.0"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
